--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
     "graphql-tools": "^4.0.5",
     "graphql-yoga": "^1.18.2",
     "merge-graphql-schemas": "^1.7.0",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "prisma-client-lib": "^1.34.5"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/node": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
+
     "nodemon": "^1.19.1"
   },
   "scripts": {
     "deploy": "prisma deploy",
-    "dev": "nodemon --exec babel-node src/server.js"
+    "dev": "nodemon --exec babel-node src/server.js",
+    "generate": "prisma generate",
+    "prisma": "yarn run deploy && yarn run generate"
   }
 }
