--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "graphql-yoga": "^1.18.2",
     "merge-graphql-schemas": "^1.7.0",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.3.0",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "prisma-client-lib": "^1.34.5"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/node": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
-
     "nodemon": "^1.19.1"
   },
   "scripts": {
