Add key management

--- a/src/.env
+++ b/src/.env
@@ -2,3 +2,9 @@ PORT = 4000
 SENDGRID_USERNAME = "tedywoo"
 SENDGRID_PASSWORD = "1waykitv.io"
 JWT_SECRET = "PM1hDEnmopnXmX9cykSLuRCFCOuecsWX"
+SCRYPT_N = 16384
+SCRYPT_R = 8
+SCRYPT_P = 1
+SCRYPT_DKLEN = 16
+SCRYPT_ENCODING = "hex"
+SCRYPT_INTERRUPTSTEP = 100000
